refactor: extract ReviewDetailUpdater to handle review detail updates