@@ -3,18 +3,20 @@ package com.liquordb.service;
 import com.liquordb.dto.comment.CommentRequestDto;
 import com.liquordb.dto.comment.CommentResponseDto;
 import com.liquordb.entity.Comment;
+import com.liquordb.exception.NotFoundException;
 import com.liquordb.mapper.CommentMapper;
 import com.liquordb.repository.CommentRepository;
 import com.liquordb.entity.Review;
 import com.liquordb.repository.ReviewRepository;
 import com.liquordb.entity.User;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,14 +26,15 @@ public class CommentService {
     private final ReviewRepository reviewRepository;
 
     // 댓글 생성
-    public void create(User user, CommentRequestDto dto) {
+    @Transactional
+    public CommentResponseDto create(User user, CommentRequestDto dto) {
         Review review = reviewRepository.findById(dto.getReviewId())
-                .orElseThrow(() -> new IllegalArgumentException("리뷰를 찾을 수 없습니다."));
+                .orElseThrow(() -> new NotFoundException("존재하지 않는 리뷰입니다."));
 
         Comment parent = null;
-        if (dto.getParentId() != null) {
+        if (dto.getParentId() != null) { // 대댓글일 경우
             parent = commentRepository.findById(dto.getParentId())
-                    .orElseThrow(() -> new IllegalArgumentException("부모 댓글을 찾을 수 없습니다."));
+                    .orElseThrow(() -> new NotFoundException("존재하지 않는 부모댓글입니다."));
         }
 
         Comment comment = Comment.builder()
@@ -42,36 +45,43 @@ public class CommentService {
                 .isDeleted(false)
                 .build();
 
-        commentRepository.save(comment);
+        return CommentMapper.toDto(commentRepository.save(comment));
     }
 
     // 댓글 삭제 (소프트 삭제)
     @Transactional
-    public void delete(Long commentId, UUID userId) {
+    public CommentResponseDto delete(Long commentId, UUID userId) {
         Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new IllegalArgumentException("댓글을 찾을 수 없습니다."));
+                .orElseThrow(() -> new NotFoundException("존재하지 않는 댓글입니다."));
 
         if (!comment.getUser().getId().equals(userId)) {
-            throw new IllegalStateException("본인의 댓글만 삭제할 수 있습니다.");
+            throw new IllegalStateException("본인이 작성한 댓글만 삭제할 수 있습니다.");
         }
 
-        // 원댓글이 삭제되어도 자식댓글이 있으면 내용을 남김
-        boolean hasChildren = commentRepository.existsByParentId(commentId);
-
-        if (hasChildren) {
-            comment.setContent("삭제된 댓글입니다.");
-        }
-
-        comment.setIsDeleted(true);
+        comment.setDeleted(true);
+        return CommentMapper.toDto(commentRepository.save(comment));
     }
 
     // 특정 리뷰의 댓글 전체 조회
-    public List<CommentResponseDto> getCommentsByReview(Long reviewId) {
-        Review review = reviewRepository.findById(reviewId).orElseThrow();
-        List<Comment> comments = commentRepository.findAllByReviewAndIsDeletedFalse(review);
+    @Transactional(readOnly = true)
+    public List<CommentResponseDto> getCommentsByReview(Pageable pageable, Long reviewId) {
+        Review review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new NotFoundException("존재하지 않는 리뷰입니다."));
+
+        Page<Comment> comments = commentRepository.findAllByReviewAndIsDeletedFalse(pageable, review);
 
         return comments.stream()
                 .map(CommentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<CommentResponseDto> getCommentsByUser(Pageable pageable, UUID userId) {
+
+        Page<Comment> comments = commentRepository.findByUserIdAndIsDeletedFalse(pageable, userId);
+
+        return comments.stream()
+                .map(CommentMapper::toDto)
+                .toList();
     }
 }
